--- a/Lab-02-starter/firmware/Lab-02-starter.X/nbproject/Makefile-genesis.properties
+++ b/Lab-02-starter/firmware/Lab-02-starter.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Tue Jul 25 15:49:42 PDT 2023
+#Tue Sep 10 13:49:20 PDT 2024
 sam_e51_cnano.languagetoolchain.version=4.30
 conf.ids=sam_e51_cnano
-host.id=1a3c-ymyk-86
-configurations-xml=4127589edb5692ca9676dd47d25e2870
-sam_e51_cnano.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=de2d3bc95a22a3f432c2e39f49efafbc
-sam_e51_cnano.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v4.30\\bin
-sam_e51_cnano.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.05\\packs\\Microchip\\SAME51_DFP\\3.6.130
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=bcd6e5453a11ce86aaffd5305e838602
-sam_e51_cnano.com-microchip-mplab-mdbcore-AtmelIceScripting-AtmelIceScriptingBase.md5=08c658d7de75da11bc13fd254c7a7ad8
-proj.dir=C\:\\Users\\Vito\\Documents\\GitHub\\CISC-211-Lab-02\\Lab-02-starter\\firmware\\Lab-02-starter.X
-host.platform=windows
+host.id=gre0-3nxn-8
+configurations-xml=8dc336623bb1a8d7b15e4ca25bdbf0b8
+sam_e51_cnano.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=39b15c6345220187cc0493f8ae026702
+sam_e51_cnano.languagetoolchain.dir=/opt/microchip/xc32/v4.30/bin
+sam_e51_cnano.Pack.dfplocation=/home/yuribz/.mchp_packs/Microchip/SAME51_DFP/3.6.130
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
+sam_e51_cnano.com-microchip-mplab-mdbcore-AtmelIceScripting-AtmelIceScriptingBase.md5=659f7542ba5bb9824f6dbfb50326e0ec
+proj.dir=/mnt/Coding/School/SDCCD/CISC 211/CISC-211-Lab-02-ybukhradze/Lab-02-starter/firmware/Lab-02-starter.X
+host.platform=linux
